--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   },
   "dependencies": {
     "@randlabs/myalgo-connect": "^1.1.1",
+    "grommet": "^2.18.0",
     "next": "latest",
+    "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "react-svg": "^14.0.16",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.12.0"
