--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+*Zone.Identifier
+
 # dependencies
 /node_modules
 /.pnp
@@ -32,3 +34,4 @@ yarn-error.log*
 
 # vercel
 .vercel
+
