--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@randlabs/myalgo-connect": "^1.1.1",
     "grommet": "^2.18.0",
+    "grommet-icons": "^4.6.2",
     "next": "latest",
     "polished": "^4.1.3",
     "react": "^17.0.2",
@@ -17,6 +19,9 @@
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.12.0"
+    "babel-plugin-styled-components": "^1.12.0",
+    "eslint": "^8.0.1",
+    "eslint-config-next": "11.1.2",
+    "eslint-plugin-react": "^7.26.1"
   }
 }
