--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@algodex/algodex-sdk": "^1.0.77",
     "@randlabs/myalgo-connect": "^1.1.1",
     "grommet": "^2.18.0",
     "grommet-icons": "^4.6.2",
