--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@algodex/algodex-sdk": "^1.1.12",
@@ -23,6 +24,7 @@
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^8.7.0",
     "eslint-config-next": "11.1.2",
-    "eslint-plugin-react": "^7.26.1"
+    "eslint-plugin-react": "^7.26.1",
+    "jest": "^27.5.1"
   }
 }
