:lipstick: UI touch up, connect wallet and form validaion

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@algodex/algodex-sdk": "^1.1.12",
     "@randlabs/myalgo-connect": "^1.1.1",
+    "formik": "^2.2.9",
     "grommet": "^2.18.0",
     "grommet-icons": "^4.6.2",
     "next": "latest",
@@ -18,7 +19,8 @@
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "react-svg": "^14.0.16",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.12.0",
