--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
   },
   "dependencies": {
     "@algodex/algodex-sdk": "^1.1.12",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.4.4",
+    "@mui/material": "^5.4.4",
     "@randlabs/myalgo-connect": "^1.1.1",
+    "@rjsf/core": "^4.0.1",
+    "@rjsf/material-ui": "^4.0.1",
     "formik": "^2.2.9",
     "grommet": "^2.18.0",
     "grommet-icons": "^4.6.2",
