--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@randlabs/myalgo-connect": "^1.1.1",
     "@rjsf/core": "^4.0.1",
     "@rjsf/material-ui": "^4.0.1",
-    "formik": "^2.2.9",
     "grommet": "^2.18.0",
     "grommet-icons": "^4.6.2",
     "next": "latest",
@@ -27,8 +26,7 @@
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "react-svg": "^14.0.16",
-    "styled-components": "^5.3.1",
-    "yup": "^0.32.11"
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.12.0",
