--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/components/*": ["./components/*"]
+      "@/components/*": ["./components/*"],
+      "@/theme/*": ["./theme/*"],
+      "@/utils/*": ["./utils/*"],
     }
   },
   "exclude": ["node_modules"]
