--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@rjsf/core": "^4.0.1",
     "@rjsf/material-ui": "^4.0.1",
     "clsx": "^1.1.1",
+    "convert-csv-to-array": "^1.0.3",
     "next": "latest",
     "polished": "^4.1.3",
     "react": "^17.0.2",
