--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@randlabs/myalgo-connect": "^1.1.1",
     "@rjsf/core": "^4.0.1",
     "@rjsf/material-ui": "^4.0.1",
+    "axios": "^0.26.0",
     "clsx": "^1.1.1",
     "convert-csv-to-array": "^1.0.3",
+    "js-big-decimal": "^1.3.4",
     "next": "latest",
     "polished": "^4.1.3",
     "react": "^17.0.2",
