--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,10 +2,10 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/components/*": ["./components/*"],
-      "@/theme/*": ["./theme/*"],
-      "@/utils/*": ["./utils/*"],
+      "@/*": ["./*"]
     }
   },
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
