--- a/package.json
+++ b/package.json
@@ -24,19 +24,25 @@
     "clsx": "^1.1.1",
     "convert-csv-to-array": "^1.0.3",
     "js-big-decimal": "^1.3.4",
-    "next": "latest",
+    "next": "^12.1.0",
+    "next-i18next": "^10.5.0",
+    "next-pwa": "^5.4.4",
     "polished": "^4.1.3",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-country-flag": "^3.0.2",
     "react-is": "^17.0.2",
-    "react-svg": "^14.0.16",
-    "styled-components": "^5.3.1"
+    "react-svg": "^14.0.16"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^8.7.0",
     "eslint-config-next": "11.1.2",
+    "eslint-plugin-jest": "^26.1.1",
     "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-storybook": "^0.5.7",
+    "eslint-plugin-testing-library": "^5.0.5",
     "jest": "^27.5.1"
   }
 }
