--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.4.4",
+    "@mui/lab": "^5.0.0-alpha.71",
     "@mui/material": "^5.4.4",
     "@randlabs/myalgo-connect": "^1.1.1",
     "@rjsf/core": "^4.0.1",
@@ -30,8 +31,8 @@
     "polished": "^4.1.3",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-country-flag": "^3.0.2",
+    "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "react-svg": "^14.0.16"
   },
