--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^1.1.1",
     "convert-csv-to-array": "^1.0.3",
     "js-big-decimal": "^1.3.4",
+    "lodash": "^4.17.21",
     "next": "^12.1.0",
     "next-i18next": "^10.5.0",
     "next-pwa": "^5.4.4",
