--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.26.0",
     "clsx": "^1.1.1",
     "convert-csv-to-array": "^1.0.3",
+    "css-mediaquery": "^0.1.2",
     "js-big-decimal": "^1.3.4",
     "next": "^12.1.0",
     "next-i18next": "^10.5.0",
@@ -39,7 +40,8 @@
     "react-country-flag": "^3.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
-    "react-svg": "^14.0.16"
+    "react-svg": "^14.0.16",
+    "ua-parser-js": "^1.0.2"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.12.0",
