--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clsx": "^1.1.1",
     "convert-csv-to-array": "^1.0.3",
     "css-mediaquery": "^0.1.2",
+    "eventemitter3": "^4.0.7",
     "js-big-decimal": "^1.3.4",
     "next": "^12.1.0",
     "next-i18next": "^10.5.0",
