--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "jest",
     "coverage": "jest --coverage",
     "test-cypress": "cross-env NODE_ENV=test start-server-and-test build-start http://localhost:3000 cypress-run",
+    "cypress-open": "cypress open",
     "cypress-run": "cypress run",
     "translate": "node ./bin/translate true"
   },
@@ -42,9 +43,9 @@
     "next-pwa": "^5.4.4",
     "polished": "^4.1.3",
     "prop-types": "^15.8.1",
-    "react": "^18.0.0",
+    "react": "^17.0.2",
     "react-country-flag": "^3.0.2",
-    "react-dom": "^18.0.0",
+    "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "react-svg": "^14.0.16",
     "ua-parser-js": "^1.0.2"
