--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "babel-plugin-styled-components": "^1.12.0",
     "cross-env": "^7.0.3",
     "cypress": "^9.5.3",
+    "cypress-file-upload": "^5.0.8",
     "cypress-react-selector": "^2.3.16",
     "eslint": "^8.7.0",
     "eslint-config-next": "11.1.2",
