:sparkles: Integrate algo name service

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@algodex/algodex-sdk": "^1.1.14",
+    "@algonameservice/sdk": "0.2.1",
     "@emotion/cache": "^11.7.1",
     "@emotion/react": "^11.8.1",
     "@emotion/server": "^11.4.0",
