--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,15 +3,18 @@
     "jest/globals": true,
     "cypress/globals": true
   },
+  "parser": "@typescript-eslint/parser",
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
     "plugin:jsx-a11y/recommended",
     "plugin:storybook/recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
     "next/core-web-vitals"
   ],
-  "plugins": ["jest", "cypress"],
+  "plugins": ["jest", "cypress", "@typescript-eslint"],
   "rules": {
     "semi": ["error", "never"],
     "quotes": ["error", "single"],
