--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "plugins": ["@babel/plugin-transform-runtime"],
   "presets": [
-    "@babel/preset-env", "@babel/preset-react"
+    "@babel/preset-env", "@babel/preset-react", "@babel/preset-typescript"
   ]
 }
