--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "next-router-mock": "^0.6.5",
     "react-test-renderer": "^18.0.0",
     "start-server-and-test": "^1.14.0",
-    "translate": "^1.4.1"
+    "translate": "^1.4.1",
+    "typescript": "^4.9.4"
   }
 }
