--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@rjsf/material-ui": "^4.0.1",
     "@typescript-eslint/eslint-plugin": "^5.34.0",
     "@typescript-eslint/parser": "^5.34.0",
+    "@walletconnect/client": "^1.8.0",
+    "algorand-walletconnect-qrcode-modal": "^1.8.0",
     "algosdk": "^1.16.0",
     "axios": "^0.26.0",
     "clsx": "^1.1.1",
