--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "translate": "node ./bin/translate true"
   },
   "dependencies": {
-    "@algodex/algodex-sdk": "^1.1.14",
+    "@algodex/algodex-sdk-patch": "^1.0.0",
     "@babel/preset-typescript": "^7.18.6",
     "@emotion/cache": "^11.7.1",
     "@emotion/react": "^11.8.1",
