--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,54 +21,43 @@ jobs:
           NPM_AUTH_TOKEN: ${{ secrets.GH_PKG_READONLY }}
       - name: Lint Files
         run: yarn lint
-  jest:
-    name: Jest
-    runs-on: ubuntu-latest
-    needs: [ lint ]
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Install dependencies
-        run: |
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GH_PKG_READONLY }}" >> ~/.npmrc
-          echo "@algodex:registry=https://npm.pkg.github.com" >> ~/.npmrc
-          yarn && yarn build
-        env:
-          NPM_AUTH_TOKEN: ${{ secrets.GH_PKG_READONLY }}
-      #      - run: rm -rf ./node_modules/@algodex/algodex-sdk
-      #      - uses: actions/checkout@v2
-      #        with:
-      #          repository: algodex/algodex-sdk
-      #          ref: next
-      #          path: ./node_modules/@algodex/algodex-sdk
-      #          token: ${{ secrets.GH_TOKEN }}
-      #      - run: cd ./node_modules/@algodex/algodex-sdk && yarn
-      - name: Run Unit Tests
-        run: yarn test
-      # - uses: paambaati/codeclimate-action@v3.0.0
-      #  env:
-      #    CC_TEST_REPORTER_ID: 90a5213f2bf5a8aaeace52d002f56245e62bf7bf08b219c5aab70c2681c6d6ad
-      #  with:
-      #    coverageCommand: yarn coverage
-  e2e:
-    name: End<->End
-    runs-on: ubuntu-latest
-    needs: [jest]
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - name: Install dependencies
-        run: |
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GH_PKG_READONLY }}" >> ~/.npmrc
-          echo "@algodex:registry=https://npm.pkg.github.com" >> ~/.npmrc
-          yarn
-        env:
-          NPM_AUTH_TOKEN: ${{ secrets.GH_PKG_READONLY }}
-      - name: Run Cypress
-        run: yarn test-cypress
+  # jest:
+  #   name: Jest
+  #   runs-on: ubuntu-latest
+  #   needs: [ lint ]
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #       with:
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #     - name: Install dependencies
+  #       run: |
+  #         echo "//npm.pkg.github.com/:_authToken=${{ secrets.GH_PKG_READONLY }}" >> ~/.npmrc
+  #         echo "@algodex:registry=https://npm.pkg.github.com" >> ~/.npmrc
+  #         yarn && yarn build
+  #       env:
+  #         NPM_AUTH_TOKEN: ${{ secrets.GH_PKG_READONLY }}
+
+  #     - name: Run Unit Tests
+  #       run: yarn test
+
+  # e2e:
+  #   name: End<->End
+  #   runs-on: ubuntu-latest
+  #   needs: [jest]
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #       with:
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #     - name: Setup Node
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: 16
+  #     - name: Install dependencies
+  #       run: |
+  #         echo "//npm.pkg.github.com/:_authToken=${{ secrets.GH_PKG_READONLY }}" >> ~/.npmrc
+  #         echo "@algodex:registry=https://npm.pkg.github.com" >> ~/.npmrc
+  #         yarn
+  #       env:
+  #         NPM_AUTH_TOKEN: ${{ secrets.GH_PKG_READONLY }}
+  #     - name: Run Cypress
+  #       run: yarn test-cypress
